# fgqsar_gen

./: README.md  pyproject.toml
examples/: demo.py  test.py
fgqsar_gen/: __init__.py  featurize.py  generator.py  pipeline.py  qsar.py  scaffold.py  utils.py
models/: X_test.pkl  X_train.pkl  rf_maccs_xScaffold.pkl  train.py  y_test.pkl
